fix(style): form radio & checkbox input visibility

--- a/styles/base/_forms.scss
+++ b/styles/base/_forms.scss
@@ -111,9 +111,7 @@ fieldset {
   }
 
   input[type='checkbox'] {
-    visibility: hidden;
-    width: 0;
-    height: 0;
+    @extend %visually-hidden;
 
     &:checked {
       + label {
@@ -155,9 +153,7 @@ fieldset {
   }
 
   input {
-    visibility: hidden;
-    width: 0;
-    height: 0;
+    @extend %visually-hidden;
 
     &:checked {
       + label {
